# smart_template_description

./: CMakeLists.txt  package.xml
launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
meshes/: needle_1.stl
urdf/: smart_template.gazebo  smart_template.trans  smart_template.xacro
