<?xml version="1.0"?>
<package format="3">
  <name>smart_template_description</name>
  <version>0.0.0</version>
  <description>The smart_template_description package</description>

  <maintainer email="tokuda@bwh.harvard.edu">Junichi Tokuda</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
